fix text align

--- a/src/styles/blocks/article-preview.css
+++ b/src/styles/blocks/article-preview.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  text-align: left;
 }
 
 .article-preview__body {
